19990914-13:15 GMT+1 Victor Szel <info@szelvesz.hu>
  * source/compiler/harbour.y
    source/compiler/gen*.c
    + Help screen made more Clipper like.
    + /f switch changed to /gf, and the whole object generation build
      in to the source in a more standard way. It works now.
    + /q0 switch added to the help screen.
    + All filename composing stuff related to specific output types moved to 
      the appropriate gen*.c file. This way the code is more modular.
    ! One variable made static in genobj32.c

19990914-11:40 GMT+1 Victor Szel <info@szelvesz.hu>
  * source/runner/stdalone/external.prg
    include/external.ch
    * Regenerated.
  * source/runner/runlib.c
    ! Made some steps to release memory blocks when an undeclared symbol error 
      occurs, seemingly with few success. This needs some more work.
    + TODO added about a possible direction for further development.
      The idea would be to replicate the Blinker DLL functionality.
  * source/compiler/harbour.y
    source/compiler/harbour.l
    source/compiler/gen*.c
    * Only every 100th line number is shown on the counter while parsing,
      this way it's more Clipper like. In theory it should also be faster,
      but due to the stdout buffering, it's approx. the same speed. Though it 
      could be faster in some platform/compiler/screen output combinations.
    + The "syntax ok" message is now replaced with the total number of 
      functions and the total number of lines. Similar to Clipper, but not
      so specific to the generated output.
    + /q0 switch no suppresses the "Harbour Compiler" header.
    + The "Generating ... output" line format changed, it's now more
      compact.
  * tests/working/rtl_test.prg
    + A new VAL() test added to test the huge value problem.
    ! One failure eliminated by hiding a filename generating difference in
      __COPYFILE(), NOTE added about this.
  * source/rtl/strings.c
    + HB_VAL() now uses hb_retnlen().