@@ -1,3 +1,14 @@
+19990914-17:30 GMT+1 Victor Szel <info@szelvesz.hu>
+  * config/rules.cf
+    * Harbour flag /q changed to /q0 to omit the compiler header.
+  * source/rtl/do.c
+    ! DO() fixed to use hb_dynsymFind() instead of hb_dynsymGet(), 
+      now it properly displays when the passed string is not a symbol, rather
+      then throwing an internal error.
+  * source/compiler/harbour.y
+    + /CREDITS command line switch to display the development team. Like in 
+      Clipper.
+
 19990914-13:15 GMT+1 Victor Szel <info@szelvesz.hu>
   * source/compiler/harbour.y
     source/compiler/gen*.c
